--- a/Godes/RentCar/templates/RentCar/Pag_info.html
+++ b/Godes/RentCar/templates/RentCar/Pag_info.html
@@ -1,48 +1,6 @@
+{% extends 'RentCar/base.html' %}
+{% block contenido %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/RentCar/static/RentCar/css/pagina_info/colorinfo.css">
-    <title>Pagina Información</title>
-</head>
-<body>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">   
-  </script>
-<!--========================================-->
-<!--ENCABEZADO-->
-<!--=========================================-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light p-3" >
-    <div class="container-fluid" id="menu">
-      <a class="navbar-brand" href="#">
-          <img src="{% static 'RentCar/img/Imagenes_main/logo.png' %}" width="50" height="50">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="}"> <span>Catálogo</span> </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#"><span style="color: rgb(255, 174, 0);">Información</a>
-        </ul>
-        <form class="d-flex">
-          <a href="" class="btn mx-3" style="background-color: rgb(255, 174, 0);">Conectar</a>
-        </form>
-      </div>
-    </div>
-    <div class="Aone withsmallpadding ppb_text"></div>   
-  </nav> 
    
 <section class="w-50 mx-auto text-center pt-5" id="intro" >
   <h1 class="p-3 fs-2 border-top border-3 pt-5">Mas sobre nuestra <span style="color: rgb(255, 174, 0);">COMUNIDAD.</span> </h1>
@@ -99,6 +57,4 @@
 
 </footer>
 
-    
-</body>
-</html>
+  {% endblock %}
