--- a/Godes/RentCar/templates/RentCar/main_page.html
+++ b/Godes/RentCar/templates/RentCar/main_page.html
@@ -1,69 +1,9 @@
-<!doctype html>
-<html lang="en">
-  {% load static %}
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="/RentCar/static/RentCar/css/css_main_page/estilo.css" >
-    <title>GODES</title>
-  </head>
-  <body>
-
-<!--=========================================-->
-<!--ENCABEZADO-->
-<!--=========================================-->
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light p-3" >
-        <div class="container-fluid" id="menu">
-          <a class="navbar-brand" href="main_page.html">
-              <img src="{% static 'RentCar/img/Imagenes_main/logo.png' %}" width="50" height="50">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href=""><span style="color: rgb(255, 174, 0);"> Inicio</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href=""> Catálogo</span> </a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href=""> Información</a>
-              </li>
-              
   
-             
-              <li class="nav-item">
-                <a class="nav-link" href="">Perfil</a>
-              </li> 
-        
-                <li class="nav-item">
-                  <a class="nav-link" href="">Ordenes</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="">agregar autos</a>
-                </li>
-        
-            </ul>
-        
-           
-            <form class="d-flex">
-              <a href="" class="btn mx-3" style="background-color: rgb(255, 174, 0);">Conectar</a>
-            </form>
- 
-          </div>
-        </div>
-      </nav>   
+  {% extends 'RentCar/base.html' %}
+  {% block contenido %}
+  {% load static %}
+
+
 
 <!--=========================================-->
 <!--Sliders con imagenes-->
@@ -155,17 +95,4 @@
 <!--PIE DE PAGINA-->
 <!--=========================================-->
 
-<footer class="w-100 d-flex aling-items justify-content-center" style="background-color: rgb(255, 174, 0);">
-  <p class="fs-5 px-3 pt-3" style="font-weight: bold;">GODES &copy; Derechos Reservados 2022</p>
-
-</footer>
-
-
-
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
- 
-  </body>
-</html>
+{% endblock %}
