--- a/Godes/RentCar/templates/RentCar/pag_registro.html
+++ b/Godes/RentCar/templates/RentCar/pag_registro.html
@@ -1,48 +1,12 @@
-{% load static %}
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="/RentCar/static/RentCar/css/pagina.reg/estiloreg.css">
-    <title>Registros</title>
-  </head>
-  <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">    
-    </script>
-<!--=========================================-->
-<!--ENCABEZADO-->
-<!--=========================================-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light p-3" >
-        <div class="menu container-fluid" id="menu">
-          <a class="navbar-brand" href="#">
-              <img src="{% static 'RentCar/img/Imagenes_main/logo.png' %}" width="50" height="50">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href=""> Catálogo </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="">Información</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="http://127.0.0.2:5501/Pagina.registro/pagregistro.html" <span style="color: rgb(255, 174, 0);"></span>Ordenes</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>  
+
+  {% extends 'RentCar/base.html' %}
+  {% block contenido %}
+  {% load static %}
+
+  <link rel="stylesheet" href="{% static 'RentCar/css/pagina.reg/estiloreg.css' %}">
+
     <table class="table table-striped">
-        <thead class="table-dark">
+        <thead style="background-color:rgb(255, 174, 0) ;">
           <tr>
             <th scope="col">#</th>
             <th scope="col">Nombre</th>
@@ -127,11 +91,6 @@
           </tr>
         </tbody>
       </table>
-<footer class="w-100 d-flex aling-items justify-content-center" style="background-color: rgb(255, 174, 0);">
-    <p class="fs-7 px-3 pt-3" style="font-weight: bold;">GODES &copy; Derechos Reservados 2022</p>
-      
-</footer>
 
- 
-</body>
-</html>
+      
+{% endblock %}
