--- a/Godes/RentCar/templates/RentCar/pagina_perfil.html
+++ b/Godes/RentCar/templates/RentCar/pagina_perfil.html
@@ -1,68 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'RentCar/base.html' %}
+{% block contenido %}
 {% load static %}
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Index</title>
-
-  <!-- CSS only -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <!-- JavaScript Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
-  <link rel="stylesheet" href="/Pagina_perfil/estilo_pf.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="/RentCar/static/RentCar/css/css_main_page/estilo.css">
-</head>
-
-<body>
-  <!--=========================================-->
-  <!--ENCABEZADO-->
-  <!--=========================================-->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light p-3">
-    <div class="container-fluid" id="menu">
-      <a class="navbar-brand" href="#">
-        <img src="{% static 'RentCar/img/Imagenes_main/logo.png' %}" width="50" height="50">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="}">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href=""> <span>Catálogo</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">Información</a>
-     
-          <li class="nav-item">
-            <a class="nav-link" href=""><span style="color: rgb(255, 174, 0);"></span>Perfil</a>
-          </li>
-        </ul>
-        
-        <a class='btn btn-danger btn-rounded' href="">
-          Cerrar Sesion
-        </a>
-      
-      </div>
-    </div>
-    <div class="Aone withsmallpadding ppb_text"></div>
-  </nav>
-
+<link rel="stylesheet" href="{% static 'RentCar/css/perfiles/estilo_pf.css' %}">
 
   <form action="" method="POST" id="form" class="container">
     <div class="row">
@@ -126,10 +66,5 @@
   </form>
   </div>
   <script src="js_perfil/validacion_perfil.js"></script>
-</body>
-<footer class="w-100 d-flex aling-items justify-content-center" style="background-color: rgb(255, 174, 0);">
-  <p class="fs-5 px-3 pt-3" style="font-weight: bold;">GODES &copy; Derechos Reservados 2022</p>
 
-</footer>
-
-</html>
+{% endblock %}
