Linkeo de paginas

--- a/RentCar/templates/RentCar/InicioSesion.html
+++ b/RentCar/templates/RentCar/InicioSesion.html
@@ -17,7 +17,7 @@
   <input class="controls" type="text" name="Rut" id="Rut" placeholder="Ingrese su rut o pasaporte" required>
   <input class="controls" type="password" name="clave" id="clave" placeholder="contraseña" required>
   <input type="submit" class="botons" type="button" value="Ingresar"></a>
-  <a href=""><input class="botons" type="button" value="Registrarse"></a>
+  <a href="{% url 'registro' %}"><input class="botons" type="button" value="Registrarse"></a>
 
   <!--<p class="warnings" id="warnings"></p>-->
 </form>
