--- a/RentCar/templates/RentCar/base.html
+++ b/RentCar/templates/RentCar/base.html
@@ -39,22 +39,26 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'inicio' %}"><span style="color: rgb(255, 174, 0);">
+                        <a class="nav-link active" aria-current="page" href="{% url 'inicio' %}"><span
+                                style="color: rgb(255, 174, 0);">
                                 Inicio</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#"> Catálogo</span> </a>
+                        <a class="nav-link" href="{% url 'catalogo_planilla' %}"> Catálogo</span> </a>
                     </li>
 
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'informacion' %}">Información</a>
                     </li>
 
+                    {% if user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'perfil' %}">Perfil</a>
                     </li>
+                    {% endif %}
 
+                    {% if user.is_staff %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'ordenes' %}">Ordenes</a>
                     </li>
@@ -62,15 +66,20 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'registro_auto' %}">agregar autos</a>
                     </li>
-
+                    {% endif %}
                 </ul>
 
-                <a class='btn btn-danger btn-rounded' href="#">Cerrar Sesion</a>
+                {% if user.is_authenticated %}
+                <a class='btn btn-danger btn-rounded' href="{% url 'logout' %}">
+                    Cerrar Sesion
+                </a>
+                {% else %}
 
                 <form class="d-flex">
-                    <a href="{% url 'inicioSesion' %}" class="btn mx-3" style="background-color: rgb(255, 174, 0);">Conectar</a>
+                    <a href="{% url 'acceso' %}" class="btn mx-3"
+                        style="background-color: rgb(255, 174, 0);">Conectar</a>
                 </form>
-
+                {% endif %}
             </div>
         </div>
     </nav>
