--- a/RentCar/templates/RentCar/base.html
+++ b/RentCar/templates/RentCar/base.html
@@ -64,7 +64,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'registro_auto' %}">agregar autos</a>
+                        <a class="nav-link" href="{% url 'registarauto' %}">agregar autos</a>
                     </li>
                     {% endif %}
                 </ul>
