--- a/RentCar/templates/RentCar/pag_form_auto.html
+++ b/RentCar/templates/RentCar/pag_form_auto.html
@@ -15,15 +15,14 @@
     </div>
 
 
-  </div>
 
 
-</div>
-<form class="form-registro my-3 mb-4" id="form" action="{% url 'registarauto' %}" method="POST">
+
+
+<form class="form-registro my-3 mb-4" id="form" action="" method="POST" enctype="multipart/form-data">
   {% csrf_token %}
   {{ form }}
 
-  </div>
   <input class="botons" type="submit" value="Agregar registro">
   <p style="color: black;" class="warnings" id="warnings"></p>
 </form>
