--- a/RentCar/templates/RentCar/base.html
+++ b/RentCar/templates/RentCar/base.html
@@ -51,11 +51,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'informacion' %}">Información</a>
                     </li>
-
                     {% if user.is_authenticated %}
+                    {% for usuario in usuario %}      
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'perfil' %}">Perfil</a>
+                        <a class="nav-link" href="{% url 'perfil' usuario.id %}">Perfil</a>
                     </li>
+                    {% endfor %}
                     {% endif %}
 
                     {% if user.is_staff %}
