--- a/RentCar/templates/RentCar/pag_form_auto.html
+++ b/RentCar/templates/RentCar/pag_form_auto.html
@@ -17,7 +17,14 @@
 
 
 
-
+    {% if mensaje %}
+    <div>
+        {% for i in mensaje %}
+            <h3><p style="color: rgb(255, 174, 0);">{{ i }}</p></h3>
+        {% endfor %}
+    </div>
+  
+    {% endif %}
 
 <form class="form-registro my-3 mb-4" id="form" action="" method="POST" enctype="multipart/form-data">
   {% csrf_token %}
@@ -26,7 +33,6 @@
   <input class="botons" type="submit" value="Agregar registro">
   <p style="color: black;" class="warnings" id="warnings"></p>
 </form>
-{{mensaje}}
 <script src="Validaciones/valdiacion_auto.js"></script>
 
 
