--- a/RentCar/templates/RentCar/base.html
+++ b/RentCar/templates/RentCar/base.html
@@ -66,9 +66,15 @@
                         <a class="nav-link" href="{% url 'registarauto' %}">agregar autos</a>
                     </li>
                     {% endif %}
+                    {% if user.is_authenticated %}  
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" ><span
+                            style="color: rgb(255, 174, 0);">Hola {{ user.first_name }}</a>
+                    </li>
+                    {% endif %}
                 </ul>
 
-                {% if user.is_authenticated %}
+                {% if  user.is_authenticated %}
                 <a class='btn btn-danger btn-rounded' href="{% url 'logout' %}">
                     Cerrar Sesion
                 </a>
