--- a/RentCar/templates/RentCar/pagina_perfil.html
+++ b/RentCar/templates/RentCar/pagina_perfil.html
@@ -7,7 +7,7 @@
 <!--=========================================-->
 <!--DATOS A SOLICITAR-->
 <!--=========================================-->
-      
+{% if  user.is_authenticated %}
 <form action="" method="POST" id="form" class="container">
   <div class="row">
     <div class="col-md-3"></div>
@@ -17,36 +17,36 @@
         <legend style="font-size: 30px;">Perfil del <span style="color:rgb(255, 174, 0) ;">Usuario</span></legend>
         <div class="mb-3">
           <label for="disabledTextInput" class="form-label">Rut</label>
-          <input type="text" id="disabledTextInput" class="form-control" placeholder="{{usuario.nombre}}">
+          <input type="text" id="disabledTextInput" class="form-control" placeholder="{{ user.username }}">
         </div>
         <div class="mb-3">
           <label for="disabledTextInput" class="form-label">Correo Electronico</label>
-          <input type="text" id="disabledTextInput" class="form-control" placeholder="xxxxxxx@xxxxx.xx">
+          <input type="text" id="disabledTextInput" class="form-control" placeholder="{{ user.email }}">
         </div>
       </fieldset>
       <div class="form">
 
         <div class="mb-3">
           <label for="">Nombre</label>
-          <input type="text" name="nombre" id="nombre" class="form-control" placeholder="{{usuario.nombre}}" required><span
+          <input type="text" name="nombre" id="nombre" class="form-control" placeholder="{{user.first_name}}" required><span
             class="barra"></span>
 
         </div>
         <div class="mb-3">
           <label for="">Apellido Paterno</label>
-          <input type="text" name="apellido_p" id="apellido_p" class="form-control" placeholder="" required><span
+          <input type="text" name="apellido_p" id="apellido_p" class="form-control" placeholder="{{user.last_name}}" required><span
             class="barra"></span>
 
         </div>
         <div class="mb-3">
           <label for="">Apellido Materno</label>
-          <input type="text" name="apellido_m" id="apellido_m" class="form-control" placeholder=""
+          <input type="text" name="apellido_m" id="apellido_m" class="form-control" placeholder="{{user.apmaterno}}"
             required><span class="barra"></span>
 
         </div>
         <div class="mb-3">
           <label for="">Direccion</label>
-          <input type="text" name="direccion" id="direccion" class="form-control" placeholder=""
+          <input type="text" name="direccion" id="direccion" class="form-control" placeholder="{{usuario.direccion}}"
             required><span class="barra"></span>
 
         </div>
@@ -61,13 +61,14 @@
           <a href="#"><input type="password" name="clave1" id="clave1" class="form-control" required><span class="barra"></span></a>
         </div>
 
-
+        <button type="submit" class="btn mx-3" style="background-color: rgb(255, 174, 0)">Guardar</button>
 
         <p class="warnings" id="warnings"></p>
       </div>
     </div>
     <div class="col-md-3"></div>
 </form>
+{% endif %}
 <script src="Validaciones/valdiacion_auto.js"></script>
 
 
