--- a/RentCar/templates/RentCar/mod_auto.html
+++ b/RentCar/templates/RentCar/mod_auto.html
@@ -20,6 +20,7 @@
 
 </div>
 <form class="form-registro my-3 mb-4" id="form" action="" method="POST" enctype="multipart/form-data">
+  <center><h4 class="formu" style="font-weight: bold;">Modificar vehiculo</h4></center>
   {% csrf_token %}
   {{ form }}
   <input class="botons" type="submit" value="Modificar">
