--- a/RentCar/templates/RentCar/pag_form_auto.html
+++ b/RentCar/templates/RentCar/pag_form_auto.html
@@ -27,6 +27,7 @@
     {% endif %}
 
 <form class="form-registro my-3 mb-4" id="form" action="" method="POST" enctype="multipart/form-data">
+  <center><h4 class="formu" style="font-weight: bold;">Agregar vehiculo</h4></center>
   {% csrf_token %}
   {{ form }}
 
