--- a/RentCar/templates/RentCar/catalogo_planilla.html
+++ b/RentCar/templates/RentCar/catalogo_planilla.html
@@ -11,7 +11,7 @@
       {% for vehiculo in vehiculo %}
         <div class="col-lg-4 col-md-12 col-sm-12  my-5 d-flex justify-content-center icono2-wrap">
             <div class="card" style="width: 20rem;">
-                <img src="{{ vehiculo.imagen1.url }}" class="card-img-top" alt="test">
+                <img src="" class="card-img-top" alt="test">
                 <div class="card-body">
                   <h5 class="card-title">{{vehiculo.idModelo}}</h5>
                   <p class="card-text">{{vehiculo.descripcion}}</p>
