--- a/RentCar/templates/RentCar/InicioSesion.html
+++ b/RentCar/templates/RentCar/InicioSesion.html
@@ -10,14 +10,7 @@
 <!--=========================================-->
 <!--DATOS A SOLICITAR-->
 <!--=========================================-->
-{% if messages %}
-  <div>
-      {% for i in messages %}
-          <h3><p style="color: rgb(255, 174, 0);">{{ i }}</p></h3>
-      {% endfor %}
-  </div>
 
-  {% endif %}
   <form class="form-registro mb-4" action="{% url 'sesion' %}" method="POST" id="form">
     {% csrf_token %}
     <center><h4 class="formu" style="font-weight: bold;">Iniciar Sesion</h4></center>
@@ -25,9 +18,13 @@
     <input class="controls" type="password" name="clave" id="clave" placeholder="contraseña" required>
     <input type="submit" class="botons" type="button" value="Ingresar"></a>
     <a href="{% url 'registro' %}"><input class="botons" type="button" value="Registrarse"></a>
-  
+    {% if messages %}
+    <div>
+        {% for i in messages %}
+            <h3><p style="color: rgb(255, 0, 0); font-family:'Montserrat', sans-serif; display: flex; justify-content: center; align-items: center;">{{ i }}</p></h3>
+        {% endfor %}
+    </div>
+    {% endif %}
     <!--<p class="warnings" id="warnings"></p>-->
   </form>
-
-
 {% endblock %}
