--- a/RentCar/templates/RentCar/Plantilla_info_auto.html
+++ b/RentCar/templates/RentCar/Plantilla_info_auto.html
@@ -1,30 +1,25 @@
-<!doctype html>
-<html lang="en">
 {% load static %}
+<!DOCTYPE html>
+<html>
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="/RentCar/static/RentCar/css/info_auto/InfoAuto.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.1.0/mdb.min.css" rel="stylesheet" />
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-
-    <link rel="stylesheet" href="{% static 'RentCar/css/info_auto/InfoAuto.css' %}">
-
-    <title>GODES</title>
+  <title>AUTO</title> 
 </head>
 
 <body>
-
-    <!--=========================================-->
-    <!--ENCABEZADO-->
-    <!--=========================================-->
-
+  <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light p-3">
         <div class="container-fluid" id="menu">
             <a class="navbar-brand" href="#">
@@ -53,7 +48,7 @@
                     </li>
 
                     {% if user.is_authenticated %}
-                    {% for usuario in usuario %}      
+                    {% for usuario in usuario %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'perfil' usuario.id %}">Perfil</a>
                     </li>
@@ -85,25 +80,21 @@
             </div>
         </div>
     </nav>
-
+  </header>
 
   <div id="content">{% block content %} {% endblock %}</div>
 
-    <!--=========================================-->
-    <!--PIE DE PAGINA-->
-    <!--=========================================-->
-
-    <footer class="w-100 d-flex aling-items justify-content-center" style="background-color: rgb(255, 174, 0);">
-      <p class="fs-5 px-3 pt-3" style="font-weight: bold;">GODES &copy; Derechos Reservados 2022</p>
+  <footer class="w-100 d-flex aling-items justify-content-center" style="background-color: rgb(255, 174, 0);">
+    <p class="fs-5 px-3 pt-3" style="font-weight: bold;">GODES &copy; Derechos Reservados 2022</p>
 
   </footer>
 
-  <!-- Option 1: Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"></script>
-
-
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <script src="/RentCar/static/RentCar/js/info_auto/InfoAuto.js"></script>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.1.0/mdb.min.js"></script>
 </body>
 
 </html>
