--- a/RentCar/templates/RentCar/Plantilla_info_auto.html
+++ b/RentCar/templates/RentCar/Plantilla_info_auto.html
@@ -3,10 +3,11 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="{% static 'RentCar/css/Info_Auto/InfoAuto.css' %}">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="/RentCar/static/RentCar/css/info_auto/InfoAuto.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
