--- a/RentCar/templates/RentCar/Plantilla_info_auto.html
+++ b/RentCar/templates/RentCar/Plantilla_info_auto.html
@@ -5,16 +5,15 @@
 <head>
     <link rel="stylesheet" href="{% static 'RentCar/css/Info_Auto/InfoAuto.css' %}">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <!-- Font Awesome -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-  <!-- MDB -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.1.0/mdb.min.css" rel="stylesheet" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 
   <title>AUTO</title> 
 </head>
@@ -47,13 +46,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'informacion' %}">Información</a>
                     </li>
-
-                    {% if user.is_authenticated %}
-                    {% for usuario in usuario %}
+                    {% if user.is_authenticated %}  
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'perfil' usuario.id %}">Perfil</a>
+                        <a class="nav-link" href="{% url 'perfil' %}">Perfil</a>
                     </li>
-                    {% endfor %}
                     {% endif %}
 
                     {% if user.is_staff %}
@@ -65,9 +61,15 @@
                         <a class="nav-link" href="{% url 'registarauto' %}">agregar autos</a>
                     </li>
                     {% endif %}
+                    {% if user.is_authenticated %}  
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" ><span
+                            style="color: rgb(255, 174, 0);">Hola {{ user.first_name }}</a>
+                    </li>
+                    {% endif %}
                 </ul>
 
-                {% if user.is_authenticated %}
+                {% if  user.is_authenticated %}
                 <a class='btn btn-danger btn-rounded' href="{% url 'logout' %}">
                     Cerrar Sesion
                 </a>
